# qpera-thesis

./: .gitignore  404.html  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
acknowledgments/: index.html
api/: index.html
architecture/: index.html
citation/: index.html
contributing/: index.html
dataset_loader/: AmazonSalesDataset.py  MovieLensDataset.py  PostRecommendationsDataset.py  ProcessDataset.py  main.py
datasets/: index.html
docs/: acknowledgments.md  api.md  architecture.md  citation.md  contributing.md  datasets.md  experiments.md  getting-started.md  index.md  mkdocs.yml  related-work.md  results.md
docs/docs/: index.md
experiments/: index.html
getting-started/: index.html
notebooks/: CBF.ipynb  CF.ipynb  CF_BPR.ipynb  dataset_loader.py  metrics.py
notebooks/py/: CBF.py  CF.py
personalization_privacy_and_explainability_of_recommendation_algorithms/: __init__.py  dataset.py  features.py  plots.py
personalization_privacy_and_explainability_of_recommendation_algorithms/modeling/: predict.py  train.py
ppera/: CBF.py  CF.py  CF_BPR.py  RL.py  data_manipulation.py  datasets_download.py  datasets_downloader.py  datasets_loader.py  decoder.py  frequency_based_rating_gen.py  kg_env.py  knowledge_graph.py  log_mlflow.py  main.py  metrics.py  preprocess.py  rating_timestamp_gen.py  rl_decoder.py  rl_kg_env.py  rl_knowledge_graph.py  rl_prediction.py  rl_preprocess.py  rl_test_agent.py  rl_train_agent.py  rl_train_transe_model.py  rl_transe_model.py  rl_utils.py  test2.py  test_agent.py  train_agent.py  train_transe_model.py  transe_model.py  utils.py
ppera/rl_tmp/AmazonSales/: .gitignore
qpera/: CF.py  data_manipulation.py  datasets_downloader.py  datasets_loader.py  log_mlflow.py  main.py  rating_timestamp_gen.py  rl_kg_env.py  rl_knowledge_graph.py  rl_test_agent.py  rl_utils.py
recommenders/datasets/: .gitignore  BaseDatasetLoader.py  README.md  dataset_loader.py
reports/explainability/: Wytłumaczalność rekomendacji (Odpowiedzi).xlsx  results.ipynb  results.xlsx
reports/figures_generation/: generate_fig.ipynb
reports/figures_generation/clean loop/: CBF_amazon_metrics.csv  CBF_movielens_metrics.csv  CBF_postrec_metrics.csv  CF_amazon_metrics.csv  CF_movielens_metrics.csv  CF_postrec_metrics.csv  RL_amazon_metrics.csv  RL_movielens_metrics.csv  RL_postrec_metrics.csv  merged_metrics.csv
reports/figures_generation/personalization/no_mod_50/: cbf_postrec_metrics.csv  cf_movielens_metrics.csv  cf_postrec_metrics.csv  rl_amazon_metrics.csv  rl_postrec_metrics.csv
reports/loop_figure_genaration/: conversion.ipynb  generate_fig.ipynb
reports/loop_figure_genaration/clean_loop/no_mod/: CBF_amazonsales_metrics.csv  CBF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_postrecommendations_metrics.csv  cbf_amazon_metrics.csv  cbf_movielens_metrics.csv  cbf_postrec_metrics.csv  cf_amazon_metrics.csv  cf_movielens_metrics.csv  cf_postrec_metrics.csv  rl_amazon_metrics.csv  rl_movielens_metrics.csv  rl_postrec_metrics.csv
reports/loop_figure_genaration/clean_loop/no_mod/new_files/: amazonsales_RL_metrics.csv  movielens_CBF_metrics.csv  movielens_RL_metrics.csv  postrecommendations_CBF_metrics.csv  postrecommendations_RL_metrics.csv
reports/loop_figure_genaration/personalization/no_mod_10/: CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  CF_movielens_metrics.csv  CF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_genaration/personalization/no_mod_10/new_files/: amazonsales_CBF_metrics.csv  amazonsales_CF_metrics.csv  amazonsales_RL_metrics.csv  movielens_CBF_metrics.csv  movielens_CF_metrics.csv  movielens_RL_metrics.csv  (+3 more)
reports/loop_figure_genaration/personalization/no_mod_25/: CBF_amazonsales_metrics.csv  CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  CF_amazonsales_metrics.csv  CF_movielens_metrics.csv  CF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_genaration/personalization/no_mod_50/: CBF_amazonsales_metrics.csv  CBF_postrecommendations_metrics.csv  CF_amazonsales_metrics.csv  CF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_postrecommendations_metrics.csv  cbf_amazon_metrics.csv  cbf_movielens_metrics.csv  cf_amazon_metrics.csv  cf_movielens_metrics.csv  rl_movielens_metrics.csv
reports/loop_figure_genaration/personalization/no_mod_80/: CBF_amazonsales_metrics.csv  CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  CF_amazonsales_metrics.csv  CF_movielens_metrics.csv  CF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_genaration/privacy/no_mod_10/: CBF_amazonsales_metrics.csv  CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  CF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_genaration/privacy/no_mod_25/: CBF_amazonsales_metrics.csv  CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  CF_amazonsales_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_genaration/privacy/no_mod_50/: CBF_amazonsales_metrics.csv  CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  CF_movielens_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_genaration/privacy/no_mod_80/: CBF_amazonsales_metrics.csv  CBF_movielens_metrics.csv  CBF_postrecommendations_metrics.csv  RL_amazonsales_metrics.csv  RL_movielens_metrics.csv  RL_postrecommendations_metrics.csv
reports/loop_figure_generation/: conversion.ipynb  generate_fig.ipynb  generate_fig_old.ipynb
results/: index.html
search/: search_index.json
(+53 files in other folders)
